--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body background="back.jpg">
+<body background="IMG_2129.jpg">
 <head>
   <meta charset="utf-8">
   <title>个人简历</title>
