--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="color: rgb(255, 255, 255);display: block; margin: 0 auto; width: 50%;">
   <header>
     <div class="base-div">
-      <h2>黑娃儿</h2>
+      <h2>郭思源</h2>
       <span>求职意向：星际游戏制作</span>
       <hr>
       <body>
